# Fish

./: .flake8  README.md  capture.py  load_model.py  main.py  postprocess.py  preprocess.py  pyproject.toml  requirements-cpu.txt  requirements.txt  train_genshin.py  window.py
DQN/: agent.py  environment.py  fish_net.py  operation.py  render.py  train_genshin.py  train_simulation.py  utils.py
DQN/output/: fish_sim_net_399.pth
data/: fish.yaml
models/: common.py  experimental.py  yolo.py
scripts/: capture.py  detect.py  dxcam_test.py
utils/: augmentations.py  autoanchor.py  callbacks.py  dataloaders.py  general.py  metrics.py  plots.py  torch_utils.py
yolov5-7.0/: val.py
yolov5-7.0/utils/: dataloaders.py  general.py  metrics.py  plots.py
